After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756881 - Guard against selection requestor disappearing
Guard against selection requestor disappearing
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2015-10-20 16:50 UTC by Owen Taylor
Modified: 2015-10-22 15:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Guard against selection requestor disappearing (3.23 KB, patch)
2015-10-20 16:50 UTC, Owen Taylor
committed Details | Review

Description Owen Taylor 2015-10-20 16:50:14 UTC
We made a number of unchecked accesses to the selection requestor,
which could cause X errors if the selection requestor vanished
(or we were sent invalid events). Add error traps around all of them.

See https://bugzilla.redhat.com/show_bug.cgi?id=1210814 for an
example of a crash that could be caused by this. (There are about
1000 instances of such a crash in http://retrace.fedoraproject.org
though no linked bug reports specifically talk about cut-and-paste
or DND.)
Comment 1 Owen Taylor 2015-10-20 16:50:18 UTC
Created attachment 313767 [details] [review]
Guard against selection requestor disappearing
Comment 2 Matthias Clasen 2015-10-22 00:43:58 UTC
Review of attachment 313767 [details] [review]:

sure
Comment 3 Owen Taylor 2015-10-22 15:08:45 UTC
Pushed to master and gtk-3-18

Attachment 313767 [details] pushed as 132b776 - Guard against selection requestor disappearing